--- a/deret.html
+++ b/deret.html
@@ -42,6 +42,9 @@
             </div>
         </div>
     </div>
+    <footer>
+        <p style="color: white;">&copy Duta Suksesi F - 2025</p>
+    </footer>
     <script src="calculator.js"></script>
 </body>
 </html>
