--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <div class="buttons">
                     <button class="special" onclick="clearDisplay()">C</button>
                     <button class="special" onclick="deleteLast()">Hapus</button>
-                    <button class="operator" onclick="appendToDisplay('%')">%</button>
+                    <button class="operator" onclick="calculatePercent()">%</button>
                     <button class="operator" onclick="appendToDisplay('/')">/</button>
                     
                     <button onclick="appendToDisplay('7')">7</button>
@@ -48,10 +48,15 @@
                     <button class="function" onclick="calculateSqrt()">√</button>
                     <button class="function" onclick="calculateSin()">sin</button>
                     <button class="function" onclick="calculateCos()">cos</button>
+                    <button class="function" onclick="calculateTan()">tan</button>
                 </div>
             </div>
         </div>
     </div>
+    <footer>
+        <p style="color: white;">&copy Duta Suksesi F - 2025</p>
+    </footer>
+
     <script src="calculator.js"></script>
 </body>
 </html>
